--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
     "@emotion/styled": "^11.14.1",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
+    "@react-spring/web": "^10.0.3",
     "better-sqlite3": "^12.2.0",
     "hamburger-react": "^2.5.2",
     "next": "15.5.3",
+    "primereact": "^10.9.7",
     "react": "19.1.0",
-    "react-dom": "19.1.0"
+    "react-dom": "19.1.0",
+    "react-hook-form": "^7.63.0",
+    "zod": "^4.1.9"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
