--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react": "19.1.0",
     "react-dom": "19.1.0",
     "react-hook-form": "^7.63.0",
+    "react-hot-toast": "^2.6.0",
     "zod": "^4.1.9"
   },
   "devDependencies": {
