--- a/package.json
+++ b/package.json
@@ -16,10 +16,10 @@
     "@react-spring/web": "^10.0.3",
     "better-sqlite3": "^12.2.0",
     "hamburger-react": "^2.5.2",
-    "next": "15.5.3",
+    "next": "^15.5.6",
     "primereact": "^10.9.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "react": "^19.2.0",
+    "react-dom": "^19.2.0",
     "react-hook-form": "^7.63.0",
     "react-hot-toast": "^2.6.0",
     "zod": "^4.1.9"
@@ -28,11 +28,11 @@
     "@eslint/eslintrc": "^3",
     "@tailwindcss/postcss": "^4",
     "@types/better-sqlite3": "^7.6.13",
-    "@types/node": "^20",
+    "@types/node": "^24.9.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "eslint": "^9",
-    "eslint-config-next": "15.5.3",
+    "eslint-config-next": "^15.5.6",
     "tailwindcss": "^4",
     "typescript": "^5"
   }
